# avi

./: TODO.org  avi.cabal
examples/: junk.hs  riff.hs
src/Codec/: AVI.hs  RIFF.hs
src/Codec/AVI/: RIFF.hs  Stream.hs
src/Codec/AVI/Stream/: Format.hs  Header.hs
src/Codec/RIFF/: AVI.hs
