name:                  avi
version:               0.0.0.0
license:               BSD3
license-file:          LICENSE
author:                Sam Truzjan
maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam Truzjan
category:              Codec
build-type:            Simple
cabal-version:         >= 1.10
tested-with:           GHC == 7.6.3
homepage:              https://github.com/pxqr/avi
bug-reports:           https://github.com/pxqr/avi/issues
synopsis:              AVI file format loader
-- description:

source-repository head
  type:                git
  location:            git://github.com/pxqr/avi.git

flag examples
  description:         Whether build examples.
  default:             False


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Codec.AVI
                     , Codec.AVI.RIFF
  other-modules:       Codec.AVI.Stream
                     , Codec.AVI.Stream.Header
                     , Codec.AVI.Stream.Format
  build-depends:       base        == 4.6.*
                     , binary      >= 0.6 && < 0.8
                     , bytestring  == 0.10.*
                     , convertible == 1.0.*
                     , pretty      == 1.1.*
                     , text        == 0.11.*

executable example-riff
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             riff.hs
  build-depends:       base        == 4.*, bytestring, binary, avi
  ghc-options:         -Wall
  if !flag(examples)
     buildable:        False
